@@ -1,5 +1,15 @@
 2004-09-05  Richard Henderson  <rth@redhat.com>
 
+	* sysdeps/alpha/fpu/fraiseexcpt.c: Remove file.
+	* sysdeps/unix/sysv/linux/kernel-features.h
+	(__ASSUME_IEEE_RAISE_EXCEPTION): New.
+	* sysdeps/unix/sysv/linux/alpha/fraiseexcpt.c: New file.
+	* sysdeps/unix/sysv/linux/alpha/kernel_sysinfo.h: New file.
+	* sysdeps/unix/sysv/linux/alpha/ieee_get_fp_control.S: Use it.
+	* sysdeps/unix/sysv/linux/alpha/ieee_set_fp_control.S: Likewise.
+
+2004-09-05  Richard Henderson  <rth@redhat.com>
+
 	* sysdeps/alpha/div.S: Save and restore FPCR around fp operations.
 	* sysdeps/alpha/divl.S, sysdeps/alpha/divq.S, sysdeps/alpha/divqu.S,
 	sysdeps/alpha/ldiv.S, sysdeps/alpha/reml.S, sysdeps/alpha/remq.S,
